--- a/contrib/debian/manpages/bluecoind.1
+++ b/contrib/debian/manpages/bluecoind.1
@@ -1,19 +1,19 @@
-.TH bluecoinD "7" "April 2013" "bluecoind 3.19" 
+.TH chartreusecoinD "7" "January 2015" "chartreusecoind v9001" 
 .SH NAME
-bluecoind \- peer-to-peer network based digital currency
+chartreusecoind \- peer-to-peer network based digital currency
 .SH SYNOPSIS
-bluecoin [options] <command> [params]  
+chartreusecoin [options] <command> [params]  
 .TP
-bluecoin [options] help <command> - Get help for a command
+chartreusecoin [options] help <command> - Get help for a command
 .SH DESCRIPTION
-This  manual page documents the bluecoind program. bluecoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
+This  manual page documents the chartreusecoind program. chartreusecoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
 
-bluecoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the bluecoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
+chartreusecoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the chartreusecoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
 
 .SH OPTIONS
 .TP
 \fB\-conf=\fR<file>
-Specify configuration file (default: bluecoin.conf)
+Specify configuration file (default: chartreusecoin.conf)
 .TP
 \fB\-gen\fR
 Generate coins
@@ -84,14 +84,14 @@ This help message
 \fBbackupwallet 'destination'\fR
 Safely copies *wallet.dat* to 'destination', which can be a directory or a path with filename.
 .TP
-\fBgetaccount 'bluecoinaddress'\fR
+\fBgetaccount 'chartreusecoinaddress'\fR
 Returns the account associated with the given address.
 .TP
-\fBsetaccount 'bluecoinaddress' ['account']\fR
+\fBsetaccount 'chartreusecoinaddress' ['account']\fR
 Sets the ['account'] associated with the given address. ['account'] may be omitted to remove an address from ['account'].
 .TP
 \fBgetaccountaddress 'account'\fR
-Returns a new bluecoin address for 'account'.
+Returns a new chartreusecoincoin address for 'account'.
 .TP
 \fBgetaddressesbyaccount 'account'\fR
 Returns the list of addresses associated with the given 'account'.
@@ -124,13 +124,13 @@ Returns a recent hashes per second performance measurement while generating.
 Returns an object containing server information.
 .TP
 \fBgetnewaddress 'account'\fR
-Returns a new bluecoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
+Returns a new chartreusecoin address for receiving payments. If 'account' is specified (recommended), it is added to the address book so payments received with the address will be credited to 'account'.
 .TP
 \fBgetreceivedbyaccount 'account' ['minconf=1']\fR
 Returns the total amount received by addresses associated with 'account' in transactions with at least ['minconf'] confirmations.
 .TP
-\fBgetreceivedbyaddress 'bluecoinaddress' ['minconf=1']\fR
-Returns the total amount received by 'bluecoinaddress' in transactions with at least ['minconf'] confirmations.
+\fBgetreceivedbyaddress 'chartreusecoinaddress' ['minconf=1']\fR
+Returns the total amount received by 'chartreusecoinaddress' in transactions with at least ['minconf'] confirmations.
 .TP
 \fBgettransaction 'txid'\fR
 Returns information about a specific transaction, given hexadecimal transaction ID.
@@ -179,26 +179,26 @@ Returns a list of the last ['count'] transactions for 'account' - for all accoun
 \fBmove <'fromaccount'> <'toaccount'> <'amount'> ['minconf=1'] ['comment']\fR
 Moves funds between accounts.
 .TP
-\fBsendfrom* <'account'> <'bluecoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
-Sends amount from account's balance to 'bluecoinaddress'. This method will fail if there is less than amount bluecoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
+\fBsendfrom* <'account'> <'chartreusecoinaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
+Sends amount from account's balance to 'chartreusecoinaddress'. This method will fail if there is less than amount chartreusecoins with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
 .TP     
-\fBsendtoaddress 'bluecoinaddress' 'amount' ['comment'] ['comment-to']\fR
-Sends amount from the server's available balance to 'bluecoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
+\fBsendtoaddress 'chartreusecoinaddress' 'amount' ['comment'] ['comment-to']\fR
+Sends amount from the server's available balance to 'chartreusecoinaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
 .TP    
 \fBstop\fR
-Stops the bluecoin server.
+Stops the chartreusecoin server.
 .TP    
-\fBvalidateaddress 'bluecoinaddress'\fR
-Checks that 'bluecoinaddress' looks like a proper bluecoin address. Returns an object containing:
+\fBvalidateaddress 'chartreusecoinaddress'\fR
+Checks that 'chartreusecoinaddress' looks like a proper chartreusecoin address. Returns an object containing:
 
     "isvalid" : true or false.
     "ismine"  : true if the address is in the server's wallet.
-    "address" : bluecoinaddress.
+    "address" : chartreusecoinaddress.
 
     *note: ismine and address are only returned if the address is valid.
 
 .SH "SEE ALSO"
-bluecoin.conf(5)
+chartreusecoin.conf(5)
 .SH AUTHOR
 This manual page was written by Micah Anderson <micah@debian.org> for the Debian system (but may be used by others). Permission is granted to copy, distribute and/or modify this document under the terms of the GNU General Public License, Version 3 or any later version published by the Free Software Foundation.
 
